fixed light background color

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container" >
+  <div class="container">
     <div class="row">
-      <div class="one-half column" style="padding: 5%">
+      <div class="one-half column" style="padding: 5%;background-color:#DEEFD6">
         <h5 style="color:#597DCE">.text-primary</h5>
         <h5 style="color:#4E4A4E">.text-secondary</h5>
         <h5 style="color:#6DA92C">.text-success</h5>
